<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, RainGaugeActivity!</string>
    <string name="water_button_label">Water</string>
    <string name="app_name">RainGauge</string>
    <string name="balance_label">Balance:</string>
    <string name="day_forecast_header">Today:</string>
    <string name="forecast_header">Forecast</string>
    <string name="go_button_label">Go</string>
    <string name="night_forecast_header">Tonight:</string>
    <string name="past_7_days">Past 7 days:</string>
    <string name="rainfall_label">Rainfall:</string>
    <string name="setup_activity_label">RainGauge Setup</string>
    <string name="watering_amount_hint">inches</string>
    <string name="watering_label">Watering:</string>
    <string name="zip_code_hint">Your ZIP code</string>

    <!-- WeatherBug API Key -->
    <string name="api_key">qxktcbwgncg9acgwbk45d9jb</string>
    
    <!-- Implementations -->
    <string name="rest_method_factory_class">com.jeremyhaberman.raingauge.rest.method.DefaultRestMethodFactory</string>

</resources>