<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp" >

        <TextView
            android:id="@+id/header"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_7_days" />

        <TextView
            android:id="@+id/rainfall_label"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginLeft="8dp"
            android:text="@string/rainfall_label" />

        <TextView
            android:id="@+id/rainfall"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/rainfall_label" />

        <TextView
            android:id="@+id/watering_label"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rainfall_label"
            android:layout_marginLeft="8dp"
            android:text="@string/watering_label" />

        <TextView
            android:id="@+id/watering"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rainfall_label"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/watering_label" />

        <TextView
            android:id="@+id/balance_label"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/watering_label"
            android:layout_marginLeft="8dp"
            android:text="@string/balance_label" />

        <TextView
            android:id="@+id/balance"
            style="@style/Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/watering_label"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/balance_label" />

        <RelativeLayout
            android:id="@+id/add_wrapper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/balance"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/watering_amount"
                style="@style/Text"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/watering_amount_hint"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:singleLine="true" >
            </EditText>

            <Button
                android:id="@+id/add_manual_watering"
                style="@style/Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_toRightOf="@id/watering_amount"
                android:text="@string/water_button_label" />
        </RelativeLayout>

        <TextView
            android:id="@+id/forecast_label"
            style="@style/Text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_wrapper"
            android:layout_marginTop="12dp"
            android:text="@string/forecast_header" />

        <TextView
            android:id="@+id/day_forecast_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/forecast_label"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/day_forecast_header"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/day_forecast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/day_forecast_label"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/night_forecast_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/day_forecast"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/night_forecast_header"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/night_forecast"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/night_forecast_label"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp" />
    </RelativeLayout>

</ScrollView>